[package]
name = "project-workflow-extensions"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.16"
anyhow = "1"
tokio = {version = "1", features = ["full"]}
serde = "1"
serde_json = "1"
serde_with = "2"
clap = { version = "4", features = ["derive", "cargo", "env"] }