[package]
name = "project-issue-state-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[profile.release]
lto = "thin"
strip = true

[dependencies]
octocrab = {version = "0.16", features = ["rustls"], default-features = false}
anyhow = "1"
tokio = {version = "1", features = ["io-std", "rt-multi-thread", "macros"]}
serde = "1"
serde_json = "1"
serde_with = "2"
clap = { version = "4", features = ["derive", "cargo", "env"] }
log = "0.4"
simplelog = { version = "0.12", default-features = false }
strum = { version = "0.24", features = ["derive"] }